build-sys: do not use wildcards in EXTRA_DIST
Wildcards in EXTRA_DIST break "make dist" for vpath build.
But plain directory names are ok.

Signed-off-by: Stepan Kasal <skasal@redhat.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -20,9 +20,9 @@ ACLOCAL_AMFLAGS = -I m4
 
 EXTRA_DIST = 	config/include-Makefile.am \
 		autogen.sh \
-		README.* \
-		licenses/* \
-		example.files/* \
+		README.devel \
+		licenses/ \
+		example.files/ \
 		po/Makevars.template \
 		po/update-potfiles
 
