build-sys: remove config/include-Makefile.am from EXTRA_DIST
It gets distributed automaticaly.

Signed-off-by: Stepan Kasal <skasal@redhat.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -18,7 +18,7 @@ SUBDIRS = \
 
 ACLOCAL_AMFLAGS = -I m4
 
-EXTRA_DIST = 	config/include-Makefile.am \
+EXTRA_DIST = \
 		autogen.sh \
 		README.devel \
 		licenses/ \
