--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -1,3 +1,4 @@
 include $(top_srcdir)/config/include-Makefile.am
 
-EXTRA_DIST = carefulputc.h env.h errs.h linux_reboot.h md5.h nls.h pathnames.h setproctitle.h widechar.h xstrncpy.h
+dist_noinst_HEADERS = carefulputc.h env.h errs.h linux_reboot.h md5.h \
+	nls.h pathnames.h setproctitle.h widechar.h xstrncpy.h
