--- a/config/include-Makefile.am
+++ b/config/include-Makefile.am
@@ -4,7 +4,7 @@ usrsbinexecdir = ${exec_prefix}/sbin
 
 AM_CPPFLAGS = -include $(top_builddir)/config.h -I$(top_srcdir)/include \
 	-DLOCALEDIR=\"$(localedir)\"
-AM_CFLAGS = -fsigned-char -fomit-frame-pointer
+AM_CFLAGS = -fsigned-char
 
 # Automake (at least up to 1.10) mishandles dist_man_MANS inside conditionals.
 # Unlike with other dist primaries, the files are not distributed if the
