tests: add mount by devname test
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -16,6 +16,7 @@ EXTRA_DIST = 	expected/ \
 		ts-ipcs.sh \
 		ts-login-checktty \
 		ts-look-separator \
+		ts-mount-devname \
 		ts-mount-label \
 		ts-mount-move \
 		ts-mount-mtablock \
