tests: add mount by label from fstab test
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -9,6 +9,7 @@ EXTRA_DIST = 	expected/ \
 		run.sh \
 		ts-col-multibyte \
 		ts-cramfs-mkfs \
+		ts-fstab-label \
 		ts-hwclock-systohc \
 		ts-ipcs-headers \
 		ts-ipcs-limits \
