tests: add mount by UUID from fstab test
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -10,6 +10,7 @@ EXTRA_DIST = 	expected/ \
 		ts-col-multibyte \
 		ts-cramfs-mkfs \
 		ts-fstab-label \
+		ts-fstab-uuid \
 		ts-hwclock-systohc \
 		ts-ipcs-headers \
 		ts-ipcs-limits \
