tests: add mount by devname from fstab
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -11,6 +11,7 @@ EXTRA_DIST = 	expected/ \
 		ts-cramfs-mkfs \
 		ts-fstab-label \
 		ts-fstab-uuid \
+		ts-fstab-devname \
 		ts-hwclock-systohc \
 		ts-ipcs-headers \
 		ts-ipcs-limits \
