tests: add mount by label with uuid in fstab
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -11,6 +11,7 @@ EXTRA_DIST = 	expected/ \
 		ts-cramfs-mkfs \
 		ts-fstab-label \
 		ts-fstab-label2devname \
+		ts-fstab-label2uuid \
 		ts-fstab-uuid \
 		ts-fstab-devname \
 		ts-fstab-devname2label \
