tests: add mount by uuid with devname in fstab
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -13,6 +13,7 @@ EXTRA_DIST = 	expected/ \
 		ts-fstab-label2devname \
 		ts-fstab-label2uuid \
 		ts-fstab-uuid \
+		ts-fstab-uuid2devname \
 		ts-fstab-devname \
 		ts-fstab-devname2label \
 		ts-fstab-devname2uuid \
