--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -7,6 +7,7 @@ EXTRA_DIST = 	expected/ \
 		input/ \
 		README \
 		run.sh \
+		ts-cal-1 \
 		ts-col-multibyte \
 		ts-cramfs-mkfs \
 		ts-fstab-label \
