tests: add cal -y test
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -9,6 +9,7 @@ EXTRA_DIST = 	expected/ \
 		run.sh \
 		ts-cal-1 \
 		ts-cal-3 \
+		ts-cal-y \
 		ts-col-multibyte \
 		ts-cramfs-mkfs \
 		ts-fstab-label \
