tools: add codecheck-config that checks for {HAVE,ENABLE}_ orphans
Signed-off-by: Matthias Koenig <mkoenig@suse.de>
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -23,7 +23,8 @@ EXTRA_DIST = \
 		README.devel \
 		licenses/ \
 		example.files/ \
-		po/update-potfiles
+		po/update-potfiles \
+		tools
 
 
 distclean-local:
