--- a/tests/commands.sh.in
+++ b/tests/commands.sh.in
@@ -1,6 +1,9 @@
 TOPDIR=@top_srcdir@
 TS_TOPDIR=$TOPDIR/tests
 
+# Misc settings
+TS_TESTUSER=${TS_TESTUSER:-"test"}
+
 # helpers
 TS_HELPER_SYSINFO="$TS_TOPDIR/helpers/mnt_test_sysinfo"
 TS_HELPER_LIBPRELOAD_TIME="$TS_TOPDIR/helpers/.libs/libpreload-time.so"
