build-sys: fix linking when ncurses is built with --with-termlib=tinfo
When system ncurses is built with --with-termlib=tinfo option
then there are two libraries - libtinfo (which contains terminal
related functions) and libncurses (rest).

Correctly link against libtinfo in such case.

Signed-off-by: Arkadiusz Miskiewicz <arekm@maven.pl>

--- a/configure.ac
+++ b/configure.ac
@@ -121,6 +121,10 @@ AC_ARG_WITH([slang],
   [], with_slang=no
 )
 
+have_tinfo=no
+AC_CHECK_LIB(tinfo, tgetent, [have_tinfo=yes])
+AM_CONDITIONAL(HAVE_TINFO, test x$have_tinfo = xyes)
+
 use_slang=no
 if test x$with_slang = xyes; then
   AC_CHECK_HEADERS([slcurses.h slang/slcurses.h], [use_slang=yes])
