mount: use encoded labels for volume_id
The current version of libvolume_id exports the encoding function for the
symlinks names, so slashes in labels and other chars, that don't really fit
into symlink names, will work as expected with LABEL=.

--- a/configure.ac
+++ b/configure.ac
@@ -87,7 +87,7 @@ have_volume_id=no
 if test x$with_fsprobe = xblkid; then
   UTIL_CHECK_LIB(blkid, blkid_known_fstype)
 elif test x$with_fsprobe = xvolume_id; then
-  UTIL_CHECK_LIB(volume_id, volume_id_open_fd)
+  UTIL_CHECK_LIB(volume_id, volume_id_encode_string)
 fi
 
 if test $have_blkid = no && test $have_volume_id = no; then
