sys-utils: add arch(1) back to the official tree
This patch add arch(1) back to util-linux source code tree, but the
command is not installed by defautl.

For more details see "./configure --help".

The arch command is deprecated in favor of "uname -m" (coreutils). The
latest (6.9+) version of coreutils also supports arch(1) as an alias
to "uname -a". Please, if you need arch(1) use the coreutils
implementation.

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -246,13 +246,17 @@ UTIL_SET_ARCH(PPC, ppc*|powerpc*)
 UTIL_SET_ARCH(M68K, m68*)
 UTIL_SET_ARCH(MIPS, mips*)
 
+AC_ARG_ENABLE([arch],
+  AS_HELP_STRING([--enable-arch], [do build arch]),
+  [], enable_arch=no
+)
+AM_CONDITIONAL(BUILD_ARCH, test x$enable_arch = xyes)
 
 AC_ARG_ENABLE([agetty],
   AS_HELP_STRING([--disable-agetty], [do not build agetty]),
   [], enable_agetty=yes
 )
 AM_CONDITIONAL(BUILD_AGETTY, test x$enable_agetty = xyes)
-
 
 AC_ARG_ENABLE([cramfs],
   AS_HELP_STRING([--disable-cramfs], [do not build fsck.cramfs, mkfs.cramfs]),
