build-sys: add warning when libuuid is not found
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -69,7 +69,12 @@ AC_DEFUN([UTIL_CHECK_LIB], [
   AC_CHECK_LIB([$1], [$2], [], [have_$1=no])
   AM_CONDITIONAL(AS_TR_CPP(HAVE_$1), [test $have_$1 = yes])
 ])
+
 UTIL_CHECK_LIB(uuid, uuid_is_null)
+if test $have_uuid = no; then
+  AC_MSG_WARN([uuid library is not found; mkswap(8) will not generate UUIDs])
+fi
+
 UTIL_CHECK_LIB(util, openpty)
 UTIL_CHECK_LIB(termcap, tgetnum)
 
