taskset: check for existence of sched_getaffinity
Some architectures do no reliably provide sched_getaffinity, so make sure the
define exists before we try using it.

Signed-off-by: Mike Frysinger <vapier@gentoo.org>

--- a/schedutils/Makefile.am
+++ b/schedutils/Makefile.am
@@ -2,7 +2,12 @@ include $(top_srcdir)/config/include-Makefile.am
 
 if BUILD_SCHEDUTILS
 
-usrbinexec_PROGRAMS = chrt ionice taskset
-man_MANS = chrt.1 ionice.1 taskset.1
+usrbinexec_PROGRAMS = chrt ionice
+man_MANS = chrt.1 ionice.1
+
+if HAVE_SCHED_GETAFFINITY
+usrbinexec_PROGRAMS += taskset
+man_MANS += taskset.1
+endif
 
 endif
