setarch: finish adding parisc support
Signed-off-by: LaMont Jones <lamont@mmjgroup.com>
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/sys-utils/Makefile.am
+++ b/sys-utils/Makefile.am
@@ -65,6 +65,9 @@ endif
 if ARCH_IA64
 SETARCH_LINKS += i386 ia64
 endif
+if ARCH_HPPA
+SETARCH_LINKS += parisc parisc64 parisc32
+endif
 
 install-exec-hook:
 	for I in $(RDEV_LINKS); do \
