build-sys: non-linux support
Here is a patch that disables linux-specific tools on non-linux targets.

Signed-Off-By: Samuel Thibault <samuel.thibault@ens-lyon.org>
Signed-Off-By: Karel Zak <kzak@redhat.com>

--- a/configure.ac
+++ b/configure.ac
@@ -292,6 +292,14 @@ AC_COMPILE_IFELSE([AC_LANG_PROGRAM(
 [AC_MSG_NOTICE([Your libc thinks that swapon has 1 arg only.])
 ])
 
+case ${host_os} in
+  *linux*)
+    AM_CONDITIONAL([LINUX], [true])
+    ;;
+  *)
+    AM_CONDITIONAL([LINUX], [false])
+    ;;
+esac
 
 dnl UTIL_SET_ARCH(ARCHNAME, PATTERN)
 dnl ---------------------------------
