blockdev: use lib/blkdev.c, fix --report
This patch replaces duplicate code with blkdev_ functions from
lib/blkdev.c.

The patch also fix the output from "blockdev --report". The Size field
was in 512-byte sectors instead in real size in bytes.

Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/disk-utils/Makefile.am
+++ b/disk-utils/Makefile.am
@@ -8,6 +8,7 @@ fsck_minix_SOURCES = fsck.minix.c bitops.h minix.h
 mkfs_minix_SOURCES = mkfs.minix.c bitops.h minix.h
 mkfs_bfs_SOURCES = mkfs.bfs.c
 mkswap_SOURCES = mkswap.c swapheader.h ../lib/linux_version.c ../lib/blkdev.c
+blockdev_SOURCES = blockdev.c ../lib/linux_version.c ../lib/blkdev.c
 
 usrbinexec_PROGRAMS = fdformat isosize
 
