build-sys: cleanup disk-utils/Makefile.am (use $utils_common)
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/disk-utils/Makefile.am
+++ b/disk-utils/Makefile.am
@@ -9,8 +9,8 @@ sbin_PROGRAMS = mkfs mkswap blockdev fsck.minix mkfs.minix mkfs.bfs
 fsck_minix_SOURCES = fsck.minix.c bitops.h minix.h
 mkfs_minix_SOURCES = mkfs.minix.c bitops.h minix.h $(utils_common)
 mkfs_bfs_SOURCES = mkfs.bfs.c
-mkswap_SOURCES = mkswap.c swapheader.h ../lib/linux_version.c ../lib/blkdev.c
-blockdev_SOURCES = blockdev.c ../lib/linux_version.c ../lib/blkdev.c
+mkswap_SOURCES = mkswap.c swapheader.h $(utils_common)
+blockdev_SOURCES = blockdev.c $(utils_common)
 
 usrbinexec_PROGRAMS = isosize
 
