build-sys: cleanup usage of linux/major.h
The utils like fdisk or login are usable on non-linux systems.
This patch allows to compile on systems without linux/major.h.

Signed-off-by: Karel Zak <kzak@redhat.com>
Signed-off-by: Samuel Thibault <samuel.thibault@ens-lyon.org>

--- a/configure.ac
+++ b/configure.ac
@@ -33,7 +33,7 @@ AC_PATH_PROG(VOLID, vol_id, [], [$PATH:/lib/udev])
 
 AC_SYS_LARGEFILE
 
-AC_CHECK_HEADERS([linux/compiler.h linux/blkpg.h], [], [], [
+AC_CHECK_HEADERS([linux/compiler.h linux/blkpg.h linux/major.h], [], [], [
 #ifdef HAVE_LINUX_COMPILER_H
 #include <linux/compiler.h>
 #endif
