tests: rename test_sysinfo, remove tailing white-spaces
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/tests/helpers/Makefile.am
+++ b/tests/helpers/Makefile.am
@@ -1,7 +1,6 @@
 include $(top_srcdir)/config/include-Makefile.am
 
-noinst_PROGRAMS = mnt_test_sysinfo test_blkdev
-mnt_test_sysinfo_SOURCES = mnt_test_sysinfo.c
+noinst_PROGRAMS = test_sysinfo test_blkdev
 
 test_blkdev_SOURCES = 	$(top_srcdir)/lib/blkdev.c \
 			$(top_srcdir)/lib/linux_version.c
